refactor test folders

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "chai": "^4.2.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "testGen": "node test-generator/generateSeleniumTests"
   },
   "author": "",
   "license": "ISC"
