--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "chai": "^4.2.0"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --no-cache",
     "testGen": "node test-generator/generateSeleniumTests"
   },
   "author": "",
